[gd_scene load_steps=4 format=3 uid="uid://l7w1x6y3z4abc"]

[ext_resource type="Script" path="res://scripts/DefeatScreen.gd" id="1"]
[ext_resource type="Theme" path="res://assets/ui_theme.theme" id="2"]
[ext_resource type="FontFile" path="res://assets/game_font.ttf" id

<applaa-write path="godot-project/scenes/DefeatScreen.tscn" description="Defeat screen when hitting ad fatigue traps">
[gd_scene load_steps=4 format=3 uid="uid://l7w1x6y3z4abc"]

[ext_resource type="Script" path="res://scripts/DefeatScreen.gd" id="1"]
[ext_resource type="Theme" path="res://assets/ui_theme.theme" id="2"]
[ext_resource type="FontFile" path="res://assets/game_font.ttf" id="3"]

[node name="DefeatScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
modulate = Color(0.4, 0.1, 0.1, 0.9)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0
theme = ExtResource("2")

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 42
text = "Ad Fatigue Overload!"
theme_override_fonts/font = ExtResource("3")
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Score: 0 Insights"
theme_override_fonts/font = ExtResource("3")
horizontal_alignment = 1

[node name="MessageLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "You've been overwhelmed by ad fatigue! The consumer brain rejected your marketing approach."
theme_override_fonts/font = ExtResource("3")
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Restart Level"
theme_override_fonts/font = ExtResource("3")

[node name="MenuButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Main Menu"
theme_override_fonts/font = ExtResource("3")

[node name="CloseButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Close Game"
theme_override_fonts/font = ExtResource("3")